--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	</div>
 	<hr>
 	<div align="center">
-		<a href="Comedy.html"><h4 >#Comedy</h8></a>
-			<a href="Fantasy.html"><h8>#Fantasy</h8></a>
-			<a href="Action.html"><h8>#Action  </h8></a>
-			<a href="SF.html"><h8>#SF</h8></a>
+		<a href="comedy.html"><h4 >#Comedy</h8></a>
+			<a href="fantasy.html"><h8>#Fantasy</h8></a>
+			<a href="action.html"><h8>#Action  </h8></a>
+			<a href="sf.html"><h8>#SF</h8></a>
 	</div> 
 	<!-- some kind of menu - copy section on all the pages --> 
 		<hr>
